RESOLVED FIXED180962
UserMediaRequest should stop a request when Document is being stopped
https://bugs.webkit.org/show_bug.cgi?id=180962
Summary UserMediaRequest should stop a request when Document is being stopped
youenn fablet
Reported 2017-12-18 18:28:54 PST
MediaStream and MediaStreamTrack should unregister from Document in their stop methods
Attachments
Patch (2.95 KB, patch)
2017-12-18 18:30 PST, youenn fablet
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (2.87 MB, application/zip)
2017-12-18 19:37 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (14.34 MB, application/zip)
2017-12-18 19:45 PST, EWS Watchlist
no flags
Patch (4.26 KB, patch)
2017-12-19 13:02 PST, youenn fablet
no flags
Rebasing (7.43 KB, patch)
2017-12-19 18:43 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-12-18 18:30:07 PST
EWS Watchlist
Comment 2 2017-12-18 19:37:37 PST
Comment on attachment 329721 [details] Patch Attachment 329721 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5738257 New failing tests: webrtc/video.html webrtc/video-autoplay.html fast/mediastream/media-stream-track-muted.html fast/mediastream/media-stream-track-source-failure.html webrtc/getUserMedia-webaudio-autoplay.html
EWS Watchlist
Comment 3 2017-12-18 19:37:38 PST
Created attachment 329728 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 4 2017-12-18 19:45:44 PST
Comment on attachment 329721 [details] Patch Attachment 329721 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/5738171 New failing tests: webrtc/video.html webrtc/video-autoplay.html platform/ios/mediastream/video-muted-in-background-tab.html webrtc/getUserMedia-webaudio-autoplay.html
EWS Watchlist
Comment 5 2017-12-18 19:45:45 PST
Created attachment 329730 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 6 2017-12-19 13:02:29 PST
youenn fablet
Comment 7 2017-12-19 18:43:20 PST
Created attachment 329871 [details] Rebasing
WebKit Commit Bot
Comment 8 2017-12-19 19:17:28 PST
Comment on attachment 329871 [details] Rebasing Clearing flags on attachment: 329871 Committed r226171: <https://trac.webkit.org/changeset/226171>
WebKit Commit Bot
Comment 9 2017-12-19 19:17:30 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2017-12-19 19:20:46 PST
Note You need to log in before you can comment on or make changes to this bug.