UserMediaRequest should stop a request when Document is being stopped https://bugs.webkit.org/show_bug.cgi?id=180962

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-19
Reviewed by Eric Carlson.

Covered by fast/mediastream/destroy-document-while-enumerating-devices.html not crashing anymore under guardmalloc.
Stopping to wait for the media stream to be active whenDocument goes away.

* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::UserMediaRequest):
(WebCore::UserMediaRequest::stop):
(WebCore::UserMediaRequest::activeDOMObjectName const):
(WebCore::UserMediaRequest::canSuspendForDocumentSuspension const):
(WebCore::UserMediaRequest::contextDestroyed): Deleted.
* Modules/mediastream/UserMediaRequest.h:

Canonical link: https://commits.webkit.org/196896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226171 268f45cc-cd09-0410-ab3c-d52691b4dbfc